# interview-assistant

./: .gitignore  package.json  test-sound.py  test.py  test_whisper_mic.py
speech/: clip_watcher.ahk  image.ps1  live-transcribe.py  pyproject.toml  send_ss.bat  test-speech.py  transcribe.bat
speech/app/: audio_stream.py  config.py  config2.py  main.py
speech/app/calls/: call_transcribe.py  call_utils.py  process_call.py
speech/app/calls/actions/: action_handler.py
speech/app/calls/ai/: deepseek_response.py  memory_store.py
speech/app/interview/: ai_processing.py  cleaning.py  get_code.py  get_company.py  get_tech_stack.py
speech/app/interview/groq/: follow_up.py  parser.py  preferred_response.py  response_schema.py
speech/app/routes/: interview.py  speech.py  status.py  twilio.py  twiml.py
speech/app/speech/: audio.py  stream_config.py  transcribe.py
speech/app/utils/: event_loop.py  twilio_client.py  websocket_manager.py
