[tool.poetry]
name = "live-transcriber"
version = "0.1.0"
description = "Transcribes Interviews and Sends To AI to get preferred Responses"
authors = ["Wesman687 <wesman687@gmail.com>"]
readme = "README.md"

# ✅ Ensure poetry recognizes the "app" directory as the main package
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pyaudio = "^0.2.11"
google-cloud-speech = "^2.16.1"
websockets = "^11.0"
torch = "*"

# ✅ Add a script to start the server correctly
bs4 = "^0.0.2"
onnxruntime-gpu = "^1.21.0"
webrtcvad = "^2.0.10"
groq = "^0.19.0"
httpx = "^0.28.1"
dotenv = "^0.9.9"
python-dotenv = "^1.0.1"
shell = "^1.0.1"
whisper-mic = "^1.4.4"
llvmlite = "^0.44.0"
numba = "^0.61.0"
sounddevice = "^0.5.1"
pynput = "^1.8.0"
cffi = "^1.17.1"
faster-whisper = {git = "https://github.com/SYSTRAN/faster-whisper.git"}
ollama = "^0.4.7"
deepseek = "^1.0.0"
[tool.poetry.scripts]
transcribe = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
